# autoquant-cli

./: .env.example  .gitignore  INSTALL.md  README.md  UPDATE.md  autoquant.py  pyproject.toml  requirements.txt
core/: __init__.py  constants.py  graph.py  model_base.py  paths.py  research.py  schemas.py  seed_train.py
core/commands/: __init__.py  clear_data.py  experiments_list.py  get_generation_summary.py  get_learning_tree.py  get_model.py  get_run_metadata.py  get_run_status.py  get_runs_summary.py  get_update_diffs.py  init_run.py  list_models.py  prepare_data.py  pull_docs.py  read_predictions.py  register_model.py  run_experiment.py  run_generation.py  run_update.py  shared.py  status.py  validate_model.py  visualize_learning.py  write_generation_report.py
core/commands/tests/: test_clear_data.py  test_docs_repo.py  test_generation_report_write.py  test_get_update_diffs.py  test_pull_docs.py  test_register_model.py  test_run_update.py  test_status.py
core/utils/: data_util.py  docs_repo.py  git_util.py  io_util.py  metrics_util.py  model_runtime.py  model_util.py  prediction_time.py  storage.py  time_utils.py
