[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoquant"
version = "0.1.0"
description = "AutoQuant autonomous financial research CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib",
  "pydantic",
  "PyYAML",
  "python-dotenv",
  "polygon-api-client",
  "networkx",
  "numpy",
  "scikit-learn",
  "pandas",
  "typer>=0.12",
]

[project.scripts]
autoquant = "autoquant:main"

[tool.setuptools]
py-modules = ["autoquant"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
